# IIoT-FL

./: pyproject.toml  setup.py
iiot_fl/: client.py  dataset.py  model.py  server.py  task.py
