[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iiot_fl"]

[project]
name="FL-IIoT"
version="0.0.1"
authors=[
    { name = "Aidan Gatenbee", email="aidan.gatenbee.1@us.af.mil"},
]
description="Exploring Federated Learning on Industrial IoT data"
readme="README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies=[
    "torch",
    "flwr[simulation]",
    "numpy",
    "scikit-learn",
    "pandas",
    "kagglehub",
    "pyyaml",
]
license="Apache-2.0"

[tool.flwr.app]
publisher="Aidan Gatenbee"

[tool.flwr.app.components]
serverapp="iiot_fl.server:app"
clientapp="iiot_fl.client:app"

[tool.flwr.app.config]
num-server-rounds=50
fraction-fit=1.0
fraction-evaluate=1.0
min-fit-clients=3
min-evaluate-clients=3
min-available-clients=3

model.input-dim=18
model.d-token=64
model.n-blocks=4
model.attention-heads=8
model.dropout=0.1
model.ffn-dim-multiplier=2

train.local-epochs=3
train.batch-size=512
train.lr=3e-4
train.weight-decay=1e-5
train.rul-loss-weight=1.0
train.failure-loss-weight=2.0
train.scheduler="cosine"

strategy.name="FedAdam"
strategy.server-lr=1e-3
strategy.server-momentum=0.9
strategy.tau=1e-4

data.data-dir="./data"

[superlink.local]
options.num-supernodes=33
options.backend.client-resources.num-cpus=2
num-gpus=0.0

[superlink.local-gpu]
options.num-supernodes=33
options.backend.client-resources.num-cpus=2
num-gpus=0.03